# dotrix

./: .gitignore  .publish  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Makefile  README.md
.github/: disable_FUNDING.yml
assets/: gift.gltf
configs/: terrain.toml
crates/dotrix_core/: Cargo.toml
crates/dotrix_core/src/: dotrix.rs  ecs.rs  input.rs  lib.rs  macros.rs  world.rs
crates/dotrix_core/src/asset/: id.rs  resource.rs  service.rs
crates/dotrix_core/src/input/: actions.rs  config.rs  manager.rs
crates/dotrix_core/src/renderer/: renderer.rs
crates/dotrix_ecs/: Cargo.toml
crates/dotrix_ecs/src/: container.rs  ecs.rs  lib.rs  world.rs
crates/dotrix_ui/: Cargo.toml
crates/dotrix_ui/src/: lib.rs  renderer.rs
crates/dotrix_ui/src/renderer/: overlay.rs
demo/: camera.rs  main.rs  scene.rs  states.rs
dotrix-assets/: Cargo.toml
dotrix-camera/: Cargo.toml
dotrix-core/: Cargo.toml
dotrix-ecs/: Cargo.toml
dotrix-egui/: Cargo.toml
dotrix-gltf/: Cargo.toml
dotrix-gpu/: Cargo.toml
dotrix-gpu/src/: buffer.rs  lib.rs  pipeline.rs  renderer.rs  shader.rs  tasks.rs  texture.rs
dotrix-image/: Cargo.toml
dotrix-image/src/: lib.rs
dotrix-input/: Cargo.toml
dotrix-input/src/: event.rs  lib.rs
dotrix-log/: Cargo.toml
dotrix-math/: Cargo.toml
dotrix-mesh/: Cargo.toml
dotrix-mesh/src/: animation.rs  armature.rs  cube.rs  lib.rs
dotrix-overlay/: Cargo.toml
dotrix-pbr/: Cargo.toml
dotrix-pbr/src/: entity.rs  lib.rs  light.rs  material.rs  model.rs  pbr.wgsl  shadow.rs  skeletal.rs
dotrix-pbr/src/shaders/: light.inc.wgsl  pbr.inc.wgsl  solid.wgsl
dotrix-postprocess/: Cargo.toml
dotrix-postprocess/src/: lib.rs  vertex.rs
dotrix-shader/: Cargo.toml
dotrix-shader/src/: lib.rs
dotrix-sky/: Cargo.toml
dotrix-terrain/: Cargo.toml
dotrix-types/: Cargo.toml
dotrix-ui/: Cargo.toml
dotrix-ui/src/: composer.rs  context.rs  edit.rs  font.rs  label.rs  lib.rs  overlay.rs  render.rs  style.rs  text.rs  ui.wgsl  view.rs  widget.rs
dotrix-window/: Cargo.toml
dotrix-window/src/: input.rs  lib.rs
dotrix_core/: Cargo.toml
dotrix_core/src/: animation.rs  application.rs  assets.rs  camera.rs  color.rs  components.rs  cubemap.rs  ecs.rs  frame.rs  generics.rs  globals.rs  id.rs  input.rs  lib.rs  math.rs  overlay.rs  pbr.rs  pipeline.rs  pipelines.rs  pose.rs  providers.rs  ray.rs  reloadable.rs  renderer.rs  skybox.rs  state.rs  transform.rs  window.rs  world.rs
dotrix_core/src/application/: services.rs
dotrix_core/src/assets/: animation.rs  buffer.rs  id.rs  load_gltf.rs  loader.rs  mesh.rs  resource.rs  shader.rs  skin.rs  texture.rs  wires.rs
dotrix_core/src/components/: light.rs  material.rs  model.rs  pipeline.rs  pose.rs  transform.rs
dotrix_core/src/generics/: color.rs  id.rs  transform.rs
dotrix_core/src/input/: mouse_ray.rs  ray.rs
dotrix_core/src/overlay/: pipeline.rs
dotrix_core/src/pbr/: solid.rs
dotrix_core/src/renderer/: access.rs  backend.rs  bind_group_layout.rs  bindings.rs  buffer.rs  color.rs  context.rs  light.rs  mapped_wgpu.rs  mesh.rs  model.rs  old_pipeline.rs  overlay.rs  pipeline.rs  pipelines.rs  sampler.rs  shader.rs  skybox.rs  texture.rs  transform.rs  widget.rs  wireframe.rs
dotrix_core/src/renderer/light/: ambient_light.rs  dir_light.rs  point_light.rs  raw_dir_light.rs  raw_point_light.rs  raw_simple_light.rs  raw_spot_light.rs  simple_light.rs  spot_light.rs
dotrix_core/src/renderer/pipeline/: buffers.rs  render_pipeline.rs
dotrix_core/src/renderer/shaders/: overlay.frag.glsl  overlay.frag.spv  overlay.vert.glsl  overlay.vert.spv  skinned.frag.glsl  skinned.frag.spv  skinned.vert.glsl  skybox.frag.glsl  skybox.frag.spv  skybox.vert.spv  static.vert.spv  static.wgsl
dotrix_core/src/shaders/: diffuse.frag.glsl  diffuse.frag.spv  overlay.frag.spv  overlay.vert.glsl  pbr-solid.wgsl  skinned.vert.spv  skybox.frag.glsl  static.vert.glsl  static.vert.spv  wires.wgsl
dotrix_core/src/window/: fullscreen.rs  monitor.rs  video_mode.rs
dotrix_core/src/world/: container.rs
dotrix_derive/: Cargo.toml
dotrix_derive/src/: lib.rs
dotrix_egui/: Cargo.toml
dotrix_egui/src/: extras.rs  lib.rs
dotrix_egui/src/extras/: file_dialog.rs
dotrix_math/: Cargo.toml
dotrix_math/src/: lib.rs  math.rs
dotrix_os/: Cargo.toml
dotrix_overlay/: Cargo.toml
dotrix_overlay/src/: lib.rs  widget.rs
dotrix_overlay/src/shaders/: overlay.wgsl
dotrix_pbr/: Cargo.toml
dotrix_pbr/src/: lib.rs  light.rs  material.rs  model.rs  skeletal.rs  solid.rs
dotrix_pbr/src/shaders/: light.inc.wgsl  skeletal.wgsl  solid.wgsl
dotrix_primitives/: Cargo.toml
dotrix_primitives/src/: cube.rs  lib.rs
dotrix_sky/: Cargo.toml
dotrix_terrain/: Cargo.toml
dotrix_terrain/src/: )  density.bak.rs  density.rs  editor.rs  generator.rs  grid.rs  height_map.rs  heightmap.rs  layers.rs  lib.rs  map.rs  marching_cubes.rs  noise.rs  octree.rs  pipeline.rs  plain.rs  services.rs  simple.rs  systems.rs  systems_bak.rs  systems_old.rs  tile.rs  voxel.rs  voxel_map.rs
dotrix_terrain/src/shaders/: terrain.wgsl
dotrix_ui/: Cargo.toml
dotrix_ui/src/: lib.rs
dotrix_voxel/: Cargo.toml
dotrix_voxel/src/: grid.rs  lib.rs  marching_cubes.rs  material_set.rs  octree.rs  voxel.rs  voxel_map.rs
dotrix_voxel/src/sdf/: circle_trace.rs  compute.rs  data.rs  jump_flood.rs  jump_flood.wgsl  mod.rs  render.rs  tex_sdf.rs
dotrix_voxel/src/sdf.bak/: mod.rs  render.wgsl
dotrix_voxel/src/sdf.bak/buffers/: lights.rs
dotrix_voxel/src/sdf/buffers/: camera.rs  mod.rs  sdf.rs
dotrix_voxel/src/sdf/buffers/lights/: storage.rs
dotrix_voxel/src/sdf/circle_trace/: accelerated_raytrace.inc.wgsl  camera.rs  hemisphere_ambient_occulsion.inc.wgsl  lighting.inc.wgsl  lights.rs  map.inc.wgsl  pbr.inc.wgsl  render.wgsl  soft_shadows_closet_approach.inc.wgsl  trilinear_surface.inc.wgsl  triplanar_surface.inc.wgsl
dotrix_voxel/src/sdf/circle_trace/lights/: data.rs  storage.rs
dotrix_voxel/src/sdf/jump_flood/: jump_flood.wgsl  jump_flood_df.wgsl  jump_flood_sdf.wgsl  jump_flood_voxel_seed.wgsl
dotrix_wgpu/: Cargo.toml
(+280 files in other folders)
