[package]
name = "dotrix"
version = "0.6.0"
authors = [
  "Elias Kartašov <elias@lowenware.com>",
  "Štěpán Wünsch <sw@lowenware.com>",
  "Nikita Zemtsov <z-nik@ya.ru>",
]
edition = "2021"
description = "3D Engine"
license = "MIT"

[lib]
name = "dotrix"
path = "src/lib.rs"

[[bin]]
name = "studio"
path = "studio/main.rs"

[features]
default = []

[dependencies]
rand = "0.8"
bytemuck = { version = "1.4", features = ["derive"] }
image = "0.24"
uuid = { version = "1.1", features = ["v4"] }
log = "0.4.20"
once_cell = "1.18.0"
futures = {version = "0.3", default-features = false, features = ["std", "executor"]}
raw-window-handle = {version = "0.5"}
winit = {version = "0.27.5", features = ["serde"]}
bitflags = "2.4.1"
ash = "0.37.3"
ash-window = "0.12.0"
gltf = "1.4.0"
base64 = "0.21.6"
glam = { version = "0.25.0", features = ["bytemuck"] }
genmesh = "0.6.2"

[dev-dependencies]
#noise = { version = "0.8" }
#bytemuck = { version = "1.4", features = ["derive"] }

