[package]
name = "dotrix"
version = "0.6.0"
authors = [
    "Elias Kartašov <elias@lowenware.com>",
    "Štěpán Wünsch <sw@lowenware.com>",
    "Nikita Zemtsov <z-nik@ya.ru>",
]
edition = "2021"
description = "3D Engine"
license = "MIT"

[lib]
name = "dotrix"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "demo/main.rs"

[[bin]]
name = "dotrix-terrain"
path = "utils/terrain/main.rs"
required-features = ["terrain"]

[features]
default = ["terrain"]
terrain = [
    "dep:noise",
    "dep:rand",
    "dep:num",
    "dep:structopt",
    "dep:toml",
    "dep:serde",
]

[dependencies]
bytemuck = { version = "1.4", features = ["derive"] }
image = "0.25"
uuid = { version = "1.1", features = ["v4"] }
log = "0.4.20"
once_cell = "1.18.0"
futures = { version = "0.3", default-features = false, features = [
    "std",
    "executor",
] }
raw-window-handle = { version = "0.6.1" }
winit = { version = "0.30.5", features = ["serde", "rwh_06"] }
bitflags = "2.4.1"
ash = "0.38.0"
ash-window = "0.13.0"
gltf = "1.4.1"
base64 = "0.22.0"
glam = { version = "0.27.0", features = ["bytemuck"] }
genmesh = "0.6.2" # TODO: make optional
# optional
noise = { version = "0.9.0", optional = true }
num = { version = "0.4", optional = true }
rand = { version = "0.8.4", features = ["small_rng"], optional = true }
structopt = { version = "0.3", optional = true }
toml = { version = "0.8", optional = true }
serde = { version = "1.0", optional = true }
