[package]
name = "dotrix_gltf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotrix_assets = { path = "../dotrix-assets", version = "0.1" }
dotrix_log = { version = "0.1", path = "../dotrix-log" }
dotrix_math = { version = "0.4", path = "../dotrix-math" }
dotrix_mesh = { version = "0.1", path = "../dotrix-mesh" }
dotrix_pbr = { version = "0.4", path = "../dotrix-pbr" }
dotrix_image = { version = "0.1", path = "../dotrix-image" }
dotrix_types = { path = "../dotrix-types", version = "0.1" }


gltf = { version = "1.0", features = ["extras", "names"] }
base64 = { version = "0.13.1" }
