[package]
name = "dotrix_gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
dotrix_core = { version = "0.6", path = "../dotrix-core" }
dotrix_log = { version = "0.1", path = "../dotrix-log" }
dotrix_types = { version = "0.1", path = "../dotrix-types" }
dotrix_window = { path = "../dotrix-window", version = "0.1.0" }
futures = {version = "0.3", default-features = false, features = ["std", "executor"] }
wgpu = { version = "0.14", features = ["trace"] }
uuid = { version = "1.2.2", features = ["v4"] }