[package]
name = "dotrix_input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotrix_core = {version = "0.6", path = "../dotrix-core"}
dotrix_types = {version = "0.1", path = "../dotrix-types"}
dotrix_log = {version = "0.1", path = "../dotrix-log"}
bitflags = {version = "1.3"}
