[package]
name = "dotrix_pbr"
version = "0.4.0"
authors = ["Elias Kartashov <elias@lowenware.com>"]
edition = "2021"

description = "Physically based rendering for Dotrix 3D Game Engine"
license = "MIT"

[dependencies]
dotrix_assets = { version = "0.1", path = "../dotrix-assets" }
dotrix_core = { version = "0.6", path = "../dotrix-core" }
dotrix_ecs = { version = "0.1", path = "../dotrix-ecs" }
dotrix_gpu = { version = "0.1", path = "../dotrix-gpu" }
dotrix_image = { version = "0.1", path = "../dotrix-image" }
dotrix_types = { version = "0.1", path = "../dotrix-types" }
dotrix_log = { version = "0.1", path = "../dotrix-log" }
dotrix_math = { version = "0.4", path = "../dotrix-math" }
dotrix_mesh = { version = "0.1", path = "../dotrix-mesh" }
dotrix_shader = { version = "0.1", path = "../dotrix-shader" }

bytemuck = { version = "1.4", features = ["derive"] }
