[package]
name = "dotrix_shader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotrix_assets = { path = "../dotrix-assets", version = "0.1" }
dotrix_log = { path = "../dotrix-log", version = "0.1" }
dotrix_types = { path = "../dotrix-types", version = "0.1" }
regex = { version = "1" }
