[package]
name = "dotrix_window"
version = "0.1.0"
edition = "2021"

[dependencies]
dotrix_input = {version = "0.1", path="../dotrix-input"}

futures = {version = "0.3", default-features = false, features = ["std", "executor"]}
raw-window-handle = {version = "0.5"}
winit = {version = "0.27.5", features = ["serde"]}
