[package]
name = "dotrix_core"
version = "0.5.4"
authors = [
  "Elias Kartashov <elias@lowenware.com>",
  "Štěpán Wünsch <sw@lowenware.com>",
  "Nikita Zemtsov <z-nik@ya.ru>",
]
edition = "2018"
description = "Dotrix 3D game engine core"
license = "MIT"
resolver = "2"

[features]
default = []

[dependencies.base64]
version = "0.13.0"

[dependencies.bytemuck]
version = "1.4"
features = ["derive"]

[dependencies.dotrix_math]
version = "0.4"
path = "../dotrix_math"

[dependencies.futures]
version = "0.3"
default-features = false
features = ["std", "executor"]

[dependencies.gltf]
version = "0.15"
features = ["extras", "names"]

[dependencies.log]
version = "0.4"

[dependencies.image]
version = "0.23.14"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.wgpu]
version = "0.12"
features = ["trace"]

[dependencies.wgpu-subscriber]
version = "0.1.0"

[dependencies.winit]
version = "0.26.0"
features = ["serde"]

# Optional dependencies
[dependencies.shaderc]
version = "0.7"
optional = true
