[package]
name = "dotrix_egui"
version = "0.2.0"
authors = ["Elias Kartashov <elias@lowenware.com>"]
edition = "2018"
description = "Dotrix egui wrapper"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.dotrix_core]
version = "0.2"
path = "../dotrix_core"

[dependencies.egui]
version = "0.8.0"
