[package]
name = "dotrix_egui"
version = "0.5.0"
authors = ["Elias Kartashov <elias@lowenware.com>"]
edition = "2018"
description = "Dotrix egui wrapper"
license = "MIT"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.dotrix_core]
version = "0.5"
path = "../dotrix_core"

[dependencies.dotrix_overlay]
version = "0.1"
path = "../dotrix_overlay"

[dependencies.egui]
version = "0.16.1"
