[package]
name = "dotrix_math"
version = "0.2.0"
authors = ["Nikita Zemtsov <z-nik@ya.ru>"]
edition = "2018"
description = "Math crate for Dotrix 3D Game Engine"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cgmath]
version = "0.17"
