[package]
name = "dotrix_terrain"
version = "0.4.0"
authors = ["Elias Kartashov <elias@lowenware.com>"]
edition = "2018"

description = "Terrain for Dotrix 3D Game Engine (under construction)"
license = "MIT"

[dependencies]
dotrix_core = { version = "0.3", path = "../dotrix_core" }
dotrix_math = { version = "0.3", path = "../dotrix_math" }
rayon = "1.5"

[dependencies.noise]
version = "0.7"

[dependencies.num]
version = "^0.3"

[dependencies.rand]
version = "0.8.4"
features = ["small_rng"]

[dependencies.wgpu]
version = "0.9"
features = ["trace"]
git = "https://github.com/gfx-rs/wgpu"
rev = "b6a6a6753411537f4e143bb79234913a243a518e"

