[package]
name = "dotrix_terrain"
version = "0.5.1"
authors = ["Elias Kartashov <elias@lowenware.com>"]
edition = "2018"

description = "Terrain for Dotrix 3D Game Engine (under construction)"
license = "MIT"

[dependencies]
dotrix_core = { version = "0.5", path = "../dotrix_core" }
dotrix_math = { version = "0.4", path = "../dotrix_math" }
dotrix_pbr = { version = "0.2", path = "../dotrix_pbr" }
dotrix_overlay = { version = "0.1", path = "../dotrix_overlay" }
dotrix_egui = { version = "0.5", path = "../dotrix_egui" }

rayon = "1.5"

[dependencies.noise]
version = "0.7"

[dependencies.num]
version = "^0.3"

[dependencies.rand]
version = "0.8.4"
features = ["small_rng"]

[dependencies.wgpu]
version = "0.9"
features = ["trace"]

[dependencies.bytemuck]
version = "1.4"
features = ["derive"]

[dependencies.image]
version = "0.23.14"

