[package]
name = "dotrix_terrain"
version = "0.5.0"
authors = ["Elias Kartashov <elias@lowenware.com>"]
edition = "2018"

description = "Terrain for Dotrix 3D Game Engine (under construction)"
license = "MIT"
resolver = "2"

[dependencies]
dotrix_core = { version = "0.5", path = "../dotrix_core" }
dotrix_math = { version = "0.4", path = "../dotrix_math" }
dotrix_derive = { version = "0.1", path = "../dotrix_derive" }
dotrix_pbr = { version = "0.2", path = "../dotrix_pbr" }
rayon = "1.5"

[dependencies.noise]
version = "0.7"

[dependencies.num]
version = "^0.3"

[dependencies.rand]
version = "0.8.4"
features = ["small_rng"]

[dependencies.wgpu]
version = "0.12"
features = ["trace"]

[dependencies.bytemuck]
version = "1.4"
features = ["derive"]
