[package]
name = "dotrix_voxel"
version = "0.5.0"
authors = ["Elias Kartashov <elias@lowenware.com>", "Andrew King <sheepchaaan@gmail.com>"]
edition = "2018"

description = "Voxels for Dotrix 3D Game Engine (under construction)"
license = "MIT"
resolver = "2"

[dependencies]
dotrix_core = { version = "0.5", path = "../dotrix_core" }
dotrix_math = { version = "0.4", path = "../dotrix_math" }
dotrix_pbr = { version = "0.2", path = "../dotrix_pbr" }
dotrix_primitives = { version = "0.1", path = "../dotrix_primitives" }
rayon = "1.5"
tera = "1.15.0"

[dependencies.num]
version = "^0.3"

[dependencies.rand]
version = "0.8.4"
features = ["small_rng"]

[dependencies.wgpu]
version = "0.12"
features = ["trace"]

[dependencies.bytemuck]
version = "1.4"
features = ["derive"]
