[package]
name = "dotrix_core"
version = "0.1.0"
authors = ["Elias Kartashov <elias@lowenware.com>"]
edition = "2018"
description = "Dotrix game engine core crate"
license = "MIT"

# [features]

[dependencies]
dotrix_ecs = { path = "../dotrix_ecs", version = "0.1.0" }
wgpu = "0.6"
winit = "0.23.0"
futures = { version = "0.3", default-features = false, features = ["std"] }
wgpu-subscriber = "0.1.0"

[dev-dependencies]
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
