[package]
name = "dotrix_ecs"
version = "0.1.0"
authors = ["Elias Kartashov <elias@lowenware.com>"]
edition = "2018"
license = "MIT"
description = "Entity Component System implementation for Dotrix game engine"
keywords = ["ecs", "dotrix"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
